HTML/InvoicePage.css
/* changes for the side menu */
.invoice{
    background-image: linear-gradient(to left, #2D5261 99%, #D3D4CD 1%);
    /* background-color: #2D5261; */
    /* width: 100%; */
    padding: 10px;
}

.invoice:hover{
    background-color: #2D5261;
}

.ic_invoice{
    color:#D3D4CD;
    margin-right: 10px;
}


/* style for the top contents (summary) */

.content_top{
    margin-top: 20px;
    display: flex;
    /* flex-direction: column; */

    min-width: 350px;
    max-width: 800px;

    gap: 20px
}

/* style for invoice page title */

.invoice_title{
    font-size: 30px;
}

/* style for summary content */

.summary{

    display: flex;
    gap: 30px;
    width: 50%;

    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;

    border: 1px solid #2D5261;
    box-shadow: 5px 5px 10px rgba(45,82,97,0.3);
    border-radius: 10px;

    text-align: center;
    color:#033246;
}

.total_outstanding{
    min-width: 90px;
    max-width: 150px;
    width: 40%;

    align-self: center;
    border-right: 1px solid #2D5261;
    padding-right: 20px;
}

.overdue{
    min-width: 65px;
    max-width: 150px;
    width: 30%;

    align-self: center;
}

.due{
    min-width: 50px;
    max-width: 150px;
    width: 30%;

    align-self: center;
    border-left: 1px solid #2D5261;
    padding-left: 20px;
}

/* style for invoice navigation */

.invoice_navigation{
    /* width: 100%; */

    margin-top: 40px;
    display: flex;
    justify-content: space-between;
}

/* styles for uploading invoices */

.upload{
    gap: 30px;
    width: 40%;

    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;

    border: 1px solid #2D5261;
    box-shadow: 5px 5px 10px rgba(45,82,97,0.3);
    border-radius: 10px;

    text-align: left;
    color:#033246;
}

.upload_invoice{
    display:flex;
    padding:5px;
    justify-content: space-between;
    gap: 10px;
}

.upload_soa{
    display:flex;
    padding:5px;
    justify-content: space-between;
    gap: 10px;
}

.upload_credit_note{
    display:flex;
    padding:5px;
    justify-content: space-between;
    gap: 10px;
}

.ic_upload{
    width: 10%;
    color:#033246;
}


/* styles for invoice types navigation */

.inv_nav_list{
    display: flex;
    gap: 50px;
    align-items: flex-end;

    font-size: 20px;
    color: #033246;

    order: 1;
}

.inv_nav_draft, .inv_nav_overdue, .inv_nav_paid{
    font-style: italic;
}

.inv_nav_all.clicked, .inv_nav_draft.clicked, .inv_nav_overdue.clicked, .inv_nav_paid.clicked{
    background-image: linear-gradient(to baseline, #D3D4CD 99%, #2D5261 1%);
}

/* styles for invoice search and filter */

.search_filter{
    display: flex;
    gap: 20px;

    color:#485f68;
    order: 2;
}

/* style for serach box */

.box_search{
    display: flex;
    align-items: center;
    
    padding:5px;
    padding-left: 10px;
    padding-right: 10px;

    border: 1px solid #485f68;
    box-shadow: 4px 4px 10px rgba(45,82,97,0.2);
    border-radius: 10px;
}

.search_type_dropdown{
    margin-right: 10px;
    border: none;
}

.ic_search{
    margin-left: 5px;
}

input[type="text"]{
    font-size: 17px;
    margin-right: 5px;
    border: none;
}

/* style for sorting */

.box_sort{
    display: flex;
    align-items: center;

    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;

    color:#485f68;
    border: 1px solid #485f68;
    box-shadow: 4px 4px 10px rgba(45,82,97,0.2);
    border-radius: 10px;
}

.ic_sort{
    margin-left: 5px;
}

.ic_sort:hover{
    cursor:pointer;
}


.sort_hint{
    margin-right: 5px;
}

.sort_dropdown{
    margin-left: 5px;
    margin-right: 5px;

    color:#033246;
    font-size: 15px;
    border: none;
}

/* style for sorting popup */

/* #sort_hint{
    cursor: pointer;
}
  
.sort_popup {
    display: none;
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: #ffffff;
    padding: 20px;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
}
  
.sort_popup.show {
    width: 150px;
    word-wrap: break-word;
    display: block;
}
  
.sort_close {
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
} */



/* styles for the invoice table */

.invoice_table{
    margin-top: 20px;
    table-layout: auto;
    width: 100%;

    border: 1px solid #485f68;
    box-shadow: 4px 4px 10px rgba(45,82,97,0.2);
    border-radius: 6px;

    background-color: #2D5261;
}

.invoice_table thead {
    display: table-header-group;

    color:white;
    align-items: center;
}

.invoice_table th{
    color: white;
    padding-left: 10px;
    padding-right: 10px;
    padding:5px;
}

.invoice_table td{
    color: #033246;
    background-color: white;
    padding:5px;

    border-radius: 3px;
    text-align: center;
    vertical-align: middle;
}

.invoice_table td:nth-child(1) {
    color: #033246;
}

.invoice_table td:nth-child(6) {
    /* display: flex; */
    justify-content: space-between;
}

.ic_edit{
    color: #033246;
    /* order: 1; */
}

.ic_delete{
    color:#033246;
    /* order: 2; */
}

.ic_delete:hover{
    cursor: pointer;
}

.ic_export{
    margin-left: 2px;
    color: #033246;
    /* order: 3; */
}

